--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>Pixel Perfect</title>
@@ -9,7 +8,6 @@
   <link rel="stylesheet" href="./normalize.css">
   <link rel="stylesheet" href="./styles.css">
 </head>
-
 <body>
   <div class="wrapper">
     <nav class="nav">
@@ -35,28 +33,29 @@
       </ul>
       <ul class="nav-soical">
         <li class="nav-soical-fb">
-          <i class="fab fa-facebook"></i>
+          <i class="nav fab fa-facebook"></i>
         </li>
         <li class="nav-soical-twitter">
-          <i class="fab fa-twitter"></i>
+          <i class="nav fab fa-twitter"></i>
         </li>
         <li class="nav-soical-google+">
-          <i class="fab fa-google-plus"></i>
+          <i class="nav fab fa-google-plus"></i>
         </li>
-        <li class="nav
-        -soical-pinterest">
-          <i class="fab fa-pinterest"></i>
+        <li class="nav-soical-pinterest">
+          <i class="nav fab fa-pinterest"></i>
         </li>
         <li class="nav-soical-instagram">
-          <i class="fab fa-instagram"></i>
+          <i class="nav fab fa-instagram"></i>
+        </li>
+        <li class="nav-soical-search">
+          <i class="nav fas fa-search"></i>
         </li>
       </ul>
     </nav>
     <main class="main">
-      This is the main container
       <ul class="main-left">
         <li class="main-left-1">
-          <img class="main-image" src="" alt="" />
+          <img class="main-image1" src="images/main1.jpg" alt="placeholder img"/>
           <h4>TRAVEL</h4>
           <h3>Signature Event</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -86,7 +85,7 @@
           </div>
         </li>
         <li class="main-left-2">
-          <img class="main-image" src="" alt="" />
+          <img class="main-image" src="images/main1.jpg" alt="placeholder img"/>
           <h4>TRAVEL</h4>
           <h3>Signature Event</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -116,7 +115,7 @@
           </div>
         </li>
         <li class="main-left-3">
-          <img class="main-image" src="" alt="" />
+          <img class="main-image" src="images/main1.jpg" alt="placeholder img"/>
           <h4>TRAVEL</h4>
           <h3>Signature Event</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -146,102 +145,103 @@
           </div>
         </li>
       </ul>
+      <div class="side">
+        this would be the side container
+        <section class="side-header">
+          <img class="side-top" src="" alt="" />
+          <img class="side-profile" src="" alt="" />
+          <h5>KOTHA SMITH</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </p>
+        </section>
+        <ul class="side-soical">
+          <li class="side-soical-fb">
+            <i class="fab fa-facebook"></i>
+          </li>
+          <li class="side-soical-twitter">
+            <i class="fab fa-twitter"></i>
+          </li>
+          <li class="side-soical-google+">
+            <i class="fab fa-google-plus"></i>
+          </li>
+          <li class="side-soical-linkedin">
+            <i class="fab fa-linkedin"></i>
+          </li>
+          <li class="side-soical-instagram">
+            <i class="fab fa-instagram"></i>
+          </li>
+        </ul>
+        <ul class="pop-post">
+          <li class="pop-post1">
+            <h6>LASTEST POST</h6>
+            <img class="pop-post-img1" src="" alt="">
+            <p class="pop-post-title1">
+            </p>
+            <p class="pop-post-date">
+            </p>
+          </li>
+          <li class="pop-post2">
+            <img class="pop-post-img2" src="" alt="">
+            <p class="pop-post-title2">
+            </p>
+            <p class="pop-post-date2">
+            </p>
+          </li>
+          <li class="pop-post3">
+            <img class="pop-post-img3" src="" alt="">
+            <p class="pop-post-title3">
+            </p>
+            <p class="pop-post-date3">
+            </p>
+          </li>
+        </ul>
+        <ul class="latest-post">
+          <li class="latest-post1">
+            <h6>LASTEST POST</h6>
+            <img class="latest-post-img1" src="" alt="">
+            <p class="latest-post-title1">
+            </p>
+            <p class="latest-post-date">
+            </p>
+          </li>
+          <li class="latest-post2">
+            <img class="latest-post-img2" src="" alt="">
+            <p class="latest-post-title2">
+            </p>
+            <p class="latest-post-date2">
+            </p>
+          </li>
+          <li class="latest-post3">
+            <img class="latest-post-img3" src="" alt="">
+            <p class="latest-post-title3">
+            </p>
+            <p class="latest-post-date3">
+            </p>
+          </li>
+        </ul>
+        <ul class="inst-post">
+          <li class="inst-post1">
+            <img src="" alt="" />
+          </li>
+          <li class="inst-post2">
+            <img src="" alt="" />
+          </li>
+          <li class="inst-post3">
+            <img src="" alt="" />
+          </li>
+          <li class="inst-post4">
+            <img src="" alt="" />
+          </li>
+          <li class="inst-post5">
+            <img src="" alt="" />
+          </li>
+          <li class="inst-post6">
+            <img src="" alt="" />
+          </li>
+        </ul>
+      </div>
     </main>
-    <div class="side">
-      this would be the side container
-      <section class="side-header">
-        <img class="side-top" src="" alt="" />
-        <img class="side-profile" src="" alt="" />
-        <h5>KOTHA SMITH</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-        </p>
-      </section>
-      <ul class="side-soical">
-        <li class="side-soical-fb">
-          <i class="fab fa-facebook"></i>
-        </li>
-        <li class="side-soical-twitter">
-          <i class="fab fa-twitter"></i>
-        </li>
-        <li class="side-soical-google+">
-          <i class="fab fa-google-plus"></i>
-        </li>
-        <li class="side-soical-linkedin">
-          <i class="fab fa-linkedin"></i>
-        </li>
-        <li class="side-soical-instagram">
-          <i class="fab fa-instagram"></i>
-        </li>
-      </ul>
-      <ul class="pop-post">
-        <li class="pop-post1">
-          <h6>LASTEST POST</h6>
-          <img class="pop-post-img1" src="" alt="">
-          <p class="pop-post-title1">
-          </p>
-          <p class="pop-post-date">
-          </p>
-        </li>
-        <li class="pop-post2">
-          <img class="pop-post-img2" src="" alt="">
-          <p class="pop-post-title2">
-          </p>
-          <p class="pop-post-date2">
-          </p>
-        </li>
-        <li class="pop-post3">
-          <img class="pop-post-img3" src="" alt="">
-          <p class="pop-post-title3">
-          </p>
-          <p class="pop-post-date3">
-          </p>
-        </li>
-      </ul>
-      <ul class="latest-post">
-        <li class="latest-post1">
-          <h6>LASTEST POST</h6>
-          <img class="latest-post-img1" src="" alt="">
-          <p class="latest-post-title1">
-          </p>
-          <p class="latest-post-date">
-          </p>
-        </li>
-        <li class="latest-post2">
-          <img class="latest-post-img2" src="" alt="">
-          <p class="latest-post-title2">
-          </p>
-          <p class="latest-post-date2">
-          </p>
-        </li>
-        <li class="latest-post3">
-          <img class="latest-post-img3" src="" alt="">
-          <p class="latest-post-title3">
-          </p>
-          <p class="latest-post-date3">
-          </p>
-        </li>
-      </ul>
-      <ul class="inst-post">
-        <li class="inst-post1">
-          <img src="" alt="" />
-        </li>
-        <li class="inst-post2">
-          <img src="" alt="" />
-        </li>
-        <li class="inst-post3">
-          <img src="" alt="" />
-        </li>
-        <li class="inst-post4">
-          <img src="" alt="" />
-        </li>
-        <li class="inst-post5">
-          <img src="" alt="" />
-        </li>
-        <li class="inst-post6">
-          <img src="" alt="" />
-        </li>
-      </ul>
-    </div>
+
     <div class="fat-footer">
       <section class="footer-top">
         FOLLOW@ INSTAGRAM
