working on aligning text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <nav class="nav">
+    <nav class="nav-wrapper">
       <ul class="nav-buttons">
         <li class="button1">
           HOME
@@ -25,12 +25,13 @@
           TRAVEL
         </li>
         <li class="button5">
-          ABOUT ME
+          ABOUT_ME
         </li>
         <li class="button6">
           CONTACT
         </li>
       </ul>
+
       <ul class="nav-soical">
         <li class="nav-soical-fb">
           <i class="nav fab fa-facebook"></i>
@@ -38,14 +39,14 @@
         <li class="nav-soical-twitter">
           <i class="nav fab fa-twitter"></i>
         </li>
-        <li class="nav-soical-google+">
-          <i class="nav fab fa-google-plus"></i>
+        <li class="nav-soical-instagram">
+          <i class="nav fab fa-instagram"></i>
         </li>
         <li class="nav-soical-pinterest">
           <i class="nav fab fa-pinterest"></i>
         </li>
-        <li class="nav-soical-instagram">
-          <i class="nav fab fa-instagram"></i>
+        <li class="nav-soical-google+">
+          <i class="nav fab fa-google-plus"></i>
         </li>
         <li class="nav-soical-search">
           <i class="nav fas fa-search"></i>
@@ -55,9 +56,9 @@
     <main class="main">
       <ul class="main-left">
         <li class="main-left-1">
-          <img class="main-image1" src="images/main1.jpg" alt="placeholder img"/>
-          <h4>TRAVEL</h4>
-          <h3>Signature Event</h3>
+          <img class="main-image" src="images/main1.jpg" alt="placeholder img"/>
+          <p class="p-head">TRAVEL</p>
+          <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </article>
@@ -86,8 +87,8 @@
         </li>
         <li class="main-left-2">
           <img class="main-image" src="images/main1.jpg" alt="placeholder img"/>
-          <h4>TRAVEL</h4>
-          <h3>Signature Event</h3>
+          <p class="p-head">TRAVEL</p>
+          <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </article>
@@ -116,8 +117,8 @@
         </li>
         <li class="main-left-3">
           <img class="main-image" src="images/main1.jpg" alt="placeholder img"/>
-          <h4>TRAVEL</h4>
-          <h3>Signature Event</h3>
+          <p class="p-head">TRAVEL</p>
+          <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </article>
@@ -146,10 +147,9 @@
         </li>
       </ul>
       <div class="side">
-        this would be the side container
         <section class="side-header">
-          <img class="side-top" src="" alt="" />
-          <img class="side-profile" src="" alt="" />
+          <img class="side-top" src="images/charleston.png" alt="" />
+          <img class="side-profile" src="images/Sarah_Hooper.jpg" alt="" />
           <h5>KOTHA SMITH</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
           </p>
