--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Pixel Perfect</title>
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="./normalize.css">
   <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
   <div class="wrapper">
     <nav class="nav-wrapper">
@@ -25,13 +27,12 @@
           TRAVEL
         </li>
         <li class="button5">
-          ABOUT_ME
+          ABOUT ME
         </li>
         <li class="button6">
           CONTACT
         </li>
       </ul>
-
       <ul class="nav-soical">
         <li class="nav-soical-fb">
           <i class="nav fab fa-facebook"></i>
@@ -56,15 +57,17 @@
     <main class="main">
       <ul class="main-left">
         <li class="main-left-1">
-          <img class="main-image" src="images/main1.jpg" alt="placeholder img"/>
+          <img class="main-image" src="images/beach.jpeg" alt="placeholder img" />
           <p class="p-head">TRAVEL</p>
           <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </article>
-          <button>Continue Reading</button>
+          <button>Continue Reading
+          </button>
+
           <div class="main-footer">
-            <p>By Sarah On October 13, 2020.
+            <p>By Sarah On October 13, 2020
             </p>
             <ul class="main-soical">
               <li class="main-soical-fb">
@@ -86,7 +89,7 @@
           </div>
         </li>
         <li class="main-left-2">
-          <img class="main-image" src="images/main1.jpg" alt="placeholder img"/>
+          <img class="main-image" src="images/main1.jpg" alt="placeholder img" />
           <p class="p-head">TRAVEL</p>
           <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -116,7 +119,7 @@
           </div>
         </li>
         <li class="main-left-3">
-          <img class="main-image" src="images/main1.jpg" alt="placeholder img"/>
+          <img class="main-image" src="images/main1.jpg" alt="placeholder img" />
           <p class="p-head">TRAVEL</p>
           <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -145,13 +148,45 @@
             </ul>
           </div>
         </li>
+        <li class="main-left-4">
+          <img class="main-image" src="images/main1.jpg" alt="placeholder img" />
+          <p class="p-head">TRAVEL</p>
+          <h3>SIGNATURE EVENT</h3>
+          <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </article>
+          <button>Continue Reading
+          </button>
+
+          <div class="main-footer">
+            <p>By Sarah On October 13, 2020
+            </p>
+            <ul class="main-soical">
+              <li class="main-soical-fb">
+                <i class="fab fa-facebook"></i>
+              </li>
+              <li class="main-soical-twitter">
+                <i class="fab fa-twitter"></i>
+              </li>
+              <li class="main-soical-pinterest">
+                <i class="fab fa-pinterest"></i>
+              </li>
+              <li class="main-soical-google+">
+                <i class="fab fa-google-plus"></i>
+              </li>
+              <li class="main-soical-instagram">
+                <i class="fab fa-instagram"></i>
+              </li>
+            </ul>
+          </div>
+        </li>
       </ul>
       <div class="side">
         <section class="side-header">
           <img class="side-top" src="images/charleston.png" alt="" />
           <img class="side-profile" src="images/Sarah_Hooper.jpg" alt="" />
           <h5>KOTHA SMITH</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+          <p>Kotha Smith is an enthusiastic and passionate Story Teller. He loves to do different home-made things and share to the world.
           </p>
         </section>
         <ul class="side-soical">
@@ -173,31 +208,37 @@
         </ul>
         <ul class="pop-post">
           <li class="pop-post1">
-            <h6>LASTEST POST</h6>
-            <img class="pop-post-img1" src="" alt="">
-            <p class="pop-post-title1">
+            <p class="pop-header">POPULAR POSTS</p>
+            <img class="pop-post-img1" src="images/pop1.png" alt="">
+            <p class="pop-post-title">
+              Ice-cream with chalk taste
             </p>
             <p class="pop-post-date">
+              February 15, 2020
             </p>
           </li>
           <li class="pop-post2">
-            <img class="pop-post-img2" src="" alt="">
-            <p class="pop-post-title2">
+            <img class="pop-post-img2" src="images/pop1.png" alt="">
+            <p class="pop-post-title">
+              The Moment of Mango Bar
             </p>
-            <p class="pop-post-date2">
+            <p class="pop-post-date">
+              March 15, 2020
             </p>
           </li>
           <li class="pop-post3">
-            <img class="pop-post-img3" src="" alt="">
-            <p class="pop-post-title3">
+            <img class="pop-post-img3" src="images/pop1.png" alt="">
+            <p class="pop-post-title">
+              Homemade Herbal Black Tea
             </p>
             <p class="pop-post-date3">
+              March 15, 2020
             </p>
           </li>
         </ul>
         <ul class="latest-post">
           <li class="latest-post1">
-            <h6>LASTEST POST</h6>
+            <p class="latest-header">LASTEST POST</p>
             <img class="latest-post-img1" src="" alt="">
             <p class="latest-post-title1">
             </p>
@@ -221,6 +262,7 @@
         </ul>
         <ul class="inst-post">
           <li class="inst-post1">
+            <p class="inst-header">INSTAGRAM FEED</p>
             <img src="" alt="" />
           </li>
           <li class="inst-post2">
@@ -247,19 +289,19 @@
         FOLLOW@ INSTAGRAM
       </section>
       <section class="footer-images">
-        <img src="https://placebear.com/125/150" alt=""/>
-        <img src="https://placebear.com/125/150" alt=""/>
-        <img src="https://placebear.com/125/150" alt=""/>
-        <img src="https://placebear.com/125/150" alt=""/>
-        <img src="https://placebear.com/125/150" alt=""/>
-        <img src="https://placebear.com/125/150" alt=""/>
-        <img src="https://placebear.com/125/150" alt=""/>
-        <img src="https://placebear.com/125/150" alt=""/>
+        <img src="https://placebear.com/125/150" alt="" />
+        <img src="https://placebear.com/125/150" alt="" />
+        <img src="https://placebear.com/125/150" alt="" />
+        <img src="https://placebear.com/125/150" alt="" />
+        <img src="https://placebear.com/125/150" alt="" />
+        <img src="https://placebear.com/125/150" alt="" />
+        <img src="https://placebear.com/125/150" alt="" />
+        <img src="https://placebear.com/125/150" alt="" />
       </section>
       <footer>
-      <i class="far fa-copyright"></i>
-      2021 Carolina Code School Students Build Cool Stuff
-      <i class="fas fa-heart"></i>
+        <i class="far fa-copyright"></i>
+        2021 Carolina Code School Students Build Cool Stuff
+        <i class="fas fa-heart"></i>
       </footer>
     </div>
   </div>
