completed Web Developer mode

--- a/index.html
+++ b/index.html
@@ -237,48 +237,72 @@
           </li>
         </ul>
         <ul class="latest-post">
+          <p class="latest-header">LATEST POSTS</p>
           <li class="latest-post1">
-            <p class="latest-header">LASTEST POST</p>
-            <img class="latest-post-img1" src="" alt="">
-            <p class="latest-post-title1">
+            <img class="latest-post-img img1" src="images/pop1.png" alt="">
+            <div class="latest-div">
+            <p class="latest-post-title">
+              A Marine Dive From Sky
             </p>
             <p class="latest-post-date">
+              May 27, 2020
             </p>
+            </div>
           </li>
           <li class="latest-post2">
-            <img class="latest-post-img2" src="" alt="">
-            <p class="latest-post-title2">
+            <img class="latest-post-img img2" src="images/pop1.png" alt="">
+            <div class="latest-div">
+            <p class="latest-post-title">
+              A Marine Dive From Sky
             </p>
-            <p class="latest-post-date2">
+            <p class="latest-post-date">
+              May 27, 2020
             </p>
+            </div>
           </li>
           <li class="latest-post3">
-            <img class="latest-post-img3" src="" alt="">
-            <p class="latest-post-title3">
+            <img class="latest-post-img img3" src="images/pop1.png" alt="">
+            <div class="latest-div">
+            <p class="latest-post-title">
+              A Marine Dive From Sky
             </p>
-            <p class="latest-post-date3">
+            <p class="latest-post-date">
+              May 27, 2020
             </p>
+            </div>
+          </li>
+          <li class="latest-post4">
+            <img class="latest-post-img img4" src="images/pop1.png" alt="">
+            <div class="latest-div">
+            <p class="latest-post-title">
+              A Marine Dive From Sky
+            </p>
+            <p class="latest-post-date">
+              May 27, 2020
+            </p>
+            </div>
           </li>
         </ul>
         <ul class="inst-post">
+          <p class="inst-header">INSTAGRAM FEED</p>
           <li class="inst-post1">
-            <p class="inst-header">INSTAGRAM FEED</p>
-            <img src="" alt="" />
-          </li>
-          <li class="inst-post2">
-            <img src="" alt="" />
+
+            <img src="images/profile1.png" alt="" />
           </li>
           <li class="inst-post3">
-            <img src="" alt="" />
+            <img src="images/pop1.png" alt="" />
+          </li>
+          <li class="inst-post3">
+            <img src="images/pop1.png" alt="" />
           </li>
           <li class="inst-post4">
-            <img src="" alt="" />
+            <img src="images/pop1.png"" alt="" />
           </li>
           <li class="inst-post5">
-            <img src="" alt="" />
+            <img src="images/pop1.png" alt="" />
           </li>
-          <li class="inst-post6">
-            <img src="" alt="" />
+          <li class="inst-post6 inst6">
+            <img src="images/pop1.png" alt="" />
           </li>
         </ul>
       </div>
@@ -298,6 +322,9 @@
         <img src="https://placebear.com/125/150" alt="" />
         <img src="https://placebear.com/125/150" alt="" />
       </section>
+      <div class="footer-scroll">
+        <i class="fas fa-angle-up"></i>
+      </div>
       <footer>
         <i class="far fa-copyright"></i>
         2021 Carolina Code School Students Build Cool Stuff
