--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="wrapper">
+    <a id="top"></a>
     <nav class="nav-wrapper">
       <ul class="nav-buttons">
         <li class="button1">
@@ -55,6 +56,7 @@
       </ul>
     </nav>
     <main class="main">
+
       <ul class="main-left">
         <li class="main-left-1">
           <img class="main-image" src="images/beach.jpeg" alt="placeholder img" />
@@ -322,9 +324,11 @@
         <img src="https://placebear.com/125/150" alt="" />
         <img src="https://placebear.com/125/150" alt="" />
       </section>
-      <div class="footer-scroll">
-        <i class="fas fa-angle-up"></i>
-      </div>
+      <a href="#top">
+        <div class="footer-scroll">
+          <i class="fas fa-angle-up"></i>
+        </div>
+      </a>
       <footer>
         <i class="far fa-copyright"></i>
         2021 Carolina Code School Students Build Cool Stuff
