updated place holder photos and alt

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <ul class="main-left">
         <li class="main-left-1">
-          <img class="main-image" src="images/beach.jpeg" alt="placeholder img" />
+          <img class="main-image" src="images/beach.jpeg" alt="Charleston beach" />
           <p class="p-head">TRAVEL</p>
           <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -91,7 +91,7 @@
           </div>
         </li>
         <li class="main-left-2">
-          <img class="main-image" src="images/main1.jpg" alt="placeholder img" />
+          <img class="main-image" src="images/main2.jpeg" alt="women eatting an apple" />
           <p class="p-head">TRAVEL</p>
           <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -121,7 +121,7 @@
           </div>
         </li>
         <li class="main-left-3">
-          <img class="main-image" src="images/main1.jpg" alt="placeholder img" />
+          <img class="main-image" src="images/main3.jpeg" alt="campfire cooking" />
           <p class="p-head">TRAVEL</p>
           <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -151,7 +151,7 @@
           </div>
         </li>
         <li class="main-left-4">
-          <img class="main-image" src="images/main1.jpg" alt="placeholder img" />
+          <img class="main-image" src="images/main4.jpeg" alt="Baker proud of his product" />
           <p class="p-head">TRAVEL</p>
           <h3>SIGNATURE EVENT</h3>
           <article> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -185,8 +185,8 @@
       </ul>
       <div class="side">
         <section class="side-header">
-          <img class="side-top" src="images/charleston.png" alt="" />
-          <img class="side-profile" src="images/Sarah_Hooper.jpg" alt="" />
+          <img class="side-top" src="images/charleston.png" alt="charleston harbor and bridge" />
+          <img class="side-profile" src="images/profile-side.jpeg" alt="a young girl with colored hair and glasses" />
           <h5>KOTHA SMITH</h5>
           <p>Kotha Smith is an enthusiastic and passionate Story Teller. He loves to do different home-made things and share to the world.
           </p>
@@ -211,7 +211,7 @@
         <ul class="pop-post">
           <li class="pop-post1">
             <p class="pop-header">POPULAR POSTS</p>
-            <img class="pop-post-img1" src="images/pop1.png" alt="">
+            <img class="pop-post-img1" src="images/pop1.jpeg" alt="carrots">
             <p class="pop-post-title">
               Ice-cream with chalk taste
             </p>
@@ -220,7 +220,7 @@
             </p>
           </li>
           <li class="pop-post2">
-            <img class="pop-post-img2" src="images/pop1.png" alt="">
+            <img class="pop-post-img2" src="images/pop2.jpeg" alt="a large breakfast spread">
             <p class="pop-post-title">
               The Moment of Mango Bar
             </p>
@@ -229,7 +229,7 @@
             </p>
           </li>
           <li class="pop-post3">
-            <img class="pop-post-img3" src="images/pop1.png" alt="">
+            <img class="pop-post-img3" src="images/pop3.jpeg" alt="pesto noodles">
             <p class="pop-post-title">
               Homemade Herbal Black Tea
             </p>
@@ -241,7 +241,7 @@
         <ul class="latest-post">
           <p class="latest-header">LATEST POSTS</p>
           <li class="latest-post1">
-            <img class="latest-post-img img1" src="images/pop1.png" alt="">
+            <img class="latest-post-img img1" src="images/latest1.jpeg" alt="oatmeal with fruit">
             <div class="latest-div">
             <p class="latest-post-title">
               A Marine Dive From Sky
@@ -252,7 +252,7 @@
             </div>
           </li>
           <li class="latest-post2">
-            <img class="latest-post-img img2" src="images/pop1.png" alt="">
+            <img class="latest-post-img img2" src="images/latest2.jpeg" alt="oatmeal and fruit">
             <div class="latest-div">
             <p class="latest-post-title">
               A Marine Dive From Sky
@@ -263,7 +263,7 @@
             </div>
           </li>
           <li class="latest-post3">
-            <img class="latest-post-img img3" src="images/pop1.png" alt="">
+            <img class="latest-post-img img3" src="images/latest3.jpeg" alt="a bowl on a dark table">
             <div class="latest-div">
             <p class="latest-post-title">
               A Marine Dive From Sky
@@ -274,7 +274,7 @@
             </div>
           </li>
           <li class="latest-post4">
-            <img class="latest-post-img img4" src="images/pop1.png" alt="">
+            <img class="latest-post-img img4" src="images/latest4.jpeg" alt="meal prepping food">
             <div class="latest-div">
             <p class="latest-post-title">
               A Marine Dive From Sky
@@ -289,22 +289,22 @@
           <p class="inst-header">INSTAGRAM FEED</p>
           <li class="inst-post1">
 
-            <img src="images/profile1.png" alt="" />
+            <img src="images/sideinsta1.jpeg" alt="3 steamed dumplings" />
           </li>
           <li class="inst-post3">
-            <img src="images/pop1.png" alt="" />
+            <img src="images/sideinsta2.jpeg" alt="bread and fruit on cutting board" />
           </li>
           <li class="inst-post3">
-            <img src="images/pop1.png" alt="" />
+            <img src="images/sideinsta3.jpeg" alt="berries" />
           </li>
           <li class="inst-post4">
-            <img src="images/pop1.png"" alt="" />
+            <img src="images/sideinsta4.jpeg" alt="veggies on a cutting board" />
           </li>
           <li class="inst-post5">
-            <img src="images/pop1.png" alt="" />
+            <img src="images/sideinsta5.jpeg" alt="an orange cut in half" />
           </li>
           <li class="inst-post6 inst6">
-            <img src="images/pop1.png" alt="" />
+            <img src="images/sideinsta6.jpeg" alt="lemons spread on table" />
           </li>
         </ul>
       </div>
@@ -315,14 +315,14 @@
         FOLLOW@ INSTAGRAM
       </section>
       <section class="footer-images">
-        <img src="https://placebear.com/125/150" alt="" />
-        <img src="https://placebear.com/125/150" alt="" />
-        <img src="https://placebear.com/125/150" alt="" />
-        <img src="https://placebear.com/125/150" alt="" />
-        <img src="https://placebear.com/125/150" alt="" />
-        <img src="https://placebear.com/125/150" alt="" />
-        <img src="https://placebear.com/125/150" alt="" />
-        <img src="https://placebear.com/125/150" alt="" />
+        <img src="images/insta1.jpeg" alt="" />
+        <img src="images/insta2.jpeg" alt="" />
+        <img src="images/insta3.jpeg" alt="" />
+        <img src="images/insta4.jpeg" alt="" />
+        <img src="images/insta5.jpeg" alt="" />
+        <img src="images/insta6.jpeg" alt="" />
+        <img src="images/insta7.jpeg" alt="" />
+        <img src="images/insta8.jpeg" alt="" />
       </section>
       <a href="#top">
         <div class="footer-scroll">
